--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -1,20 +1,11 @@
-FROM node:16-alpine AS builder
+FROM node:16-alpine
 
-WORKDIR /app
+WORKDIR '/app'
 
-COPY package.json .
+COPY ./package.json ./
 
 RUN npm install
 
 COPY . .
 
-RUN npm run build
-
-FROM nginx
-
-EXPOSE 3000
-
-COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
-
-COPY --from=builder /app/build /usr/share/nginx/html
-
+CMD ["npm", "run", "start"]
