--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,3 +23,17 @@ jobs:
       - run: docker push zyussuf/multi-server
       - run: docker push zyussuf/multi-worker
       
+      - name: Generate deployment package
+        run: zip -r deploy.zip . -x '*.git*'      
+      
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v18
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
+          application_name: multi-docker
+          environment_name: Multidocker-env
+          existing_bucket_name: elasticbeanstalk-us-west-2-905461434181
+          region: us-west-2
+          version_label: ${{ github.sha }}
+          deployment_package: deploy.zip
