--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,54 @@
-version: "3"
+version: '3'
 services:
-  client:
-    image: "zyussuf/multi-client"
-    mem_limit: 128m
-    hostname: client
-  server:
-    image: "zyussuf/multi-server"
-    mem_limit: 128m
-    hostname: api
+  postgres:
+    image: 'postgres:14.2'
     environment:
-      - REDIS_HOST=$REDIS_HOST
-      - REDIS_PORT=$REDIS_PORT
-      - PGUSER=$PGUSER
-      - PGHOST=$PGHOST
-      - PGDATABASE=$PGDATABASE
-      - PGPASSWORD=$PGPASSWORD
-      - PGPORT=$PGPORT
-  worker:
-    image: "zyussuf/multi-worker"
-    mem_limit: 128m
-    hostname: worker
-    environment:
-      - REDIS_HOST=$REDIS_HOST
-      - REDIS_PORT=$REDIS_PORT
+      - POSTGRES_PASSWORD=postgres_password
+  redis:
+    image: 'redis:7.0.0'
   nginx:
-    image: "zyussuf/multi-nginx"
-    mem_limit: 128m
-    hostname: nginx
+    depends_on:
+      - api
+      - client
+    restart: always
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile.dev
     ports:
-      - "80:80"
+      - '3050:80'
+  api:
+    build:
+      context: ./server
+      dockerfile: Dockerfile.dev
+    volumes:
+      - /home/node/app/node_modules
+      - ./server:/home/node/app
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - PGUSER=postgres
+      - PGHOST=postgres
+      - PGDATABASE=postgres
+      - PGPASSWORD=postgres_password
+      - PGPORT=5432
+  client:
+    stdin_open: true
+    build:
+      context: ./client
+      dockerfile: Dockerfile.dev
+    volumes:
+      - /home/node/app/node_modules
+      - ./client:/home/node/app
+    environment:
+      - WDS_SOCKET_PORT=0
+  worker:
+    build:
+      context: ./worker
+      dockerfile: Dockerfile.dev
+    volumes:
+      - /home/node/app/node_modules
+      - ./worker:/home/node/app
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+
